removed permission handling from the controller and left it in the services. Changed tests to reflect this change.